   * Make delayed shroud updates and scenarion objectives to change and 
     show information for viewing team. (help in bug #13313)
   * Making the game return to the add-on install dialog just before
     installing one, and with its entry selected
   * Implemented FR #13321: added "unit advances=N" command to debug console
     to immediately level-up selected unit N times
 * WML Engine:
   * Added [show_objectives] tag (part of bug #13042)
   * Made moveto events set $x2,$y2 to the source hex. (bug #13140)
   * [switch] and [case]/[else] can be used to wrap story [part]s in [story]
     now (bug #13170)
   * Added a "preload" WML event type.
   * Added ability to change the share_view team attribute using [modify_side] tag. 
     Be sure to use fog=yes for that side  (bug #13320)
   * Added support for Lua scripts in WML event actions ([lua] tag)
   * [modify_side] can now change the share_view attribute
 * Miscellaneous and bugfixes:
   * Fixed compilation with -D_GLIBCXX_PARALLEL
   * Fixed handling of floating-point WML constants on localized Windows
     (impacts "submerge" animations and AI settings)
   * Improved random village naming
   * Fixed control transfer after player leaves MP game (bug #13238)
   * Fixed a bug with auto-stored WML variables not being restored correctly

Version 1.6a:
 * User interface:
   * Remove a no longer valid assert (bug #13217)
   * Make sure the dialog always uses the full map area width
 * Multiplayer and AI:
   * Fixed bug #13222: Do not use the FormulaAI by default since it could lead
     to the AI doing nothing
   * Fixed bug #13218: infinite loop in the AI if it persistently tries to move
     unit to occupied square
   * Moved FormulaAI related debug output into the info log level

Version 1.6:
 * Campaigns:
   * Under the Burning Suns:
     * All portraits now have a transparent background (bug #13135)
 * Graphics:
   * New or updated unit graphics for the Mermaid Priestess and Enchantress
     unit lines